--- a/index.html
+++ b/index.html
@@ -9,5 +9,10 @@
 <body>
     <h1>Hello Work!</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum tempore praesentium adipisci veniam blanditiis, molestiae qui fuga nemo et neque ipsum explicabo accusantium exercitationem corrupti nulla dolor labore nesciunt eligendi?</p>
+    <form action="submit">
+        <label for="name">Name</label>
+        <input type="text">
+        <button type="submit">Submit</button>
+    </form>
 </body>
 </html>
